add_executable(unit-tests)

target_sources(unit-tests
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/LogUI.cpp
        ${CMAKE_CURRENT_LIST_DIR}/UnitTestHelper.cpp
        ${CMAKE_CURRENT_LIST_DIR}/AttributeMap-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Choice-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/CLInterface-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Condition-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/CompoundInstruction-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/DaemonInterface-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/DecoratorInstruction-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Equals-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/ExecutionStatus-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Fallback-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/FileVariable-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Include-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Input-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Instruction-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/InstructionRegistry-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Listen-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/LocalVariable-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Message-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/NamedCallbackManager-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Output-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/ParallelSequence-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Procedure-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/ProcedureToTreeDataUtils-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Repeat-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Runner-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/RegisterType-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/ResetVariable-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/SequenceParser-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/SequenceWorkspace-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/TreeData-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/TreeDataXmlWriteUtils-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/UserChoice-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/UserInterface-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/VariableRegistry-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Wait-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Workspace-tests.cpp
        ${CMAKE_CURRENT_LIST_DIR}/../../../main/c++/sup/sequencer-cli/CLInterface.cpp
        ${CMAKE_CURRENT_LIST_DIR}/../../../main/c++/sup/sequencer-daemon/DaemonInterface.cpp
)

target_include_directories(unit-tests
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/../../../main/c++
        ${CMAKE_CURRENT_LIST_DIR}/../../../main/c++/sup/sequencer-cli
        ${CMAKE_CURRENT_LIST_DIR}/../../../main/c++/sup/sequencer-daemon
        $ENV{CODAC_ROOT}/include
)

target_link_directories(unit-tests
    PRIVATE
        $ENV{CODAC_ROOT}/lib
)

find_package(GTest REQUIRED)

target_link_libraries(unit-tests
    PRIVATE
        GTest::GTest
        GTest::Main
        gmock
        sup-sequencer-shared
        ccs-core
)
